# fossdev

./: .gitignore  Makefile  PracticeMakefile  ServiceMakefile  docker-compose.yml  main.py  pyproject.toml  readme.md  tests.py
docs_domain/: Makefile  setup.py
docs_domain/docs/: SPECIFICATION.md
docs_domain/docs/source/: QUICKSTART.md  USAGE.rst  conf.py  index.rst
docs_domain/src/: sales.py
docs_domain/tests/: test_sales.py
file_exchanger/docs/: context.drawio  sequence.drawio  use_cases.drawio
frameworks/: setup.py
frameworks/src/tax/: income.py
frameworks/tests/tax/: test_income.py  test_income_pytest.py  test_income_unittest.py
makeutil/: README.md
makeutil/Dependency check/: Makefile
makeutil/Dependency check/src/: check_req.py
makeutil/capp/: Makefile  app  main.c
makeutil/chains/: Makefile  requirements.txt
makeutil/chains/src/: app_style.py  calc.py
makeutil/chains/utils/: check_req.py
makeutil/check_req/: Makefile
makeutil/check_req/src/: check_req.py
makeutil/check_type/: Makefile
makeutil/check_type/src/: calc.py
makeutil/stateless/: Makefile
makeutil/stateless/src/: app.py
makeutil/styles/: Makefile
makeutil/styles/src/: app.py
makeutil/test_pypi/: .gitignore  Makefile  README.md  setup.py
makeutil/test_pypi/src/: mini_http.py
makeutil/test_pypi/tests/: test_ping.py
order_service/: Dockerfile  Makefile  pyproject.toml
order_service/src/app/: main.py
product_service/: pyproject.toml
product_service/src/app/: main.py
testing/principle/: setup.py
testing/tdd/: setup.py
testing/tdd/docs/: task.md
(+4 files in other folders)
